# 2D_imune_edema_pinn

./: .gitignore  2d_fdm_model.ipynb  2d_fdm_model_cuda.ipynb  2d_pinn_model.ipynb  Cb.csv  check_point.sh  create_jobs_cluster.py  edo_fdm_model.ipynb  edo_fdm_model.py  edo_pinn_model.ipynb  edo_pinn_model.py  get_files.sh  initialize_project.sh  load_cechkpoint.sh  pyTourch.yml  result_analisys.ipynb  run_jobs.py  run_jobs_local.py  torch-numba-11.yml  torch-numba.yml  torch_nn_example.ipynb
2D/: 2d_fdm_model.ipynb  2d_pinn_model.ipynb  Cn.csv  (+2 more)
codigo_joao/: CMakeLists.txt  main.c
codigo_joao/home/joao-victor-oliveira/Documents/Repositories/TCC/Modelagem-Mec-nica-da-Forma-o-de-Edemas/versao_2D_em_c/cb_over_time/: concentration0.vtk  concentration1.vtk  concentration10.vtk  concentration100.vtk  concentration101.vtk  concentration102.vtk  concentration103.vtk  concentration104.vtk  concentration105.vtk  concentration106.vtk  concentration107.vtk  concentration108.vtk  concentration109.vtk  concentration11.vtk  concentration110.vtk  concentration111.vtk  concentration112.vtk  concentration113.vtk  concentration114.vtk  concentration115.vtk  concentration116.vtk  concentration117.vtk  concentration118.vtk  concentration119.vtk  concentration12.vtk  concentration120.vtk  concentration121.vtk  concentration122.vtk  concentration123.vtk  concentration124.vtk  concentration125.vtk  concentration126.vtk  concentration127.vtk  concentration128.vtk  concentration129.vtk  concentration13.vtk  concentration130.vtk  concentration131.vtk  concentration132.vtk  concentration133.vtk  (+211 more)
(+1191 files in other folders)
